
* 3.1.0 *

* Allow drop_database to be called even when DB does not exist.

* Remove totally broken ADONET connection mode. Want it back, submit a patch.

* Schema reflection now finds primary key for all occasions. Fixed #60 [Boško Ivanišević]

* Allow complex order objects to not be molested by our visitor overrides. Fixes #99

* Default unicode datatypes!

* New #lowercase_schema_reflection configuration that allows you to downcase all tables and columns.
  Good for legacy databases. Fixes #86. Thanks @dmajkic.

* Rails 3.1 with prepared statement support. Uses "EXEC sp_executesql ..." for just about everything now.


* 3.0.15 *

* Way better schema support! Thanks to @ianic! Fixes #61

* Warn of possible permission problems if "EXEC sp_helptext..." does not work view. Fixes #73.


* 3.0.13/3.0.14 *

* Allow TinyTDS/DBLIB mode to pass down :host/:port config options.


* 3.0.12 *

* Bug fix for previous TinyTDS lost connections.


* 3.0.11 *

* Azure compatibility.

* TinyTDS enhancements for lost connections. Default connection mode.


* 3.0.10 *

* Fix #rowtable_orders visitor helper to use first column if no pk column was found.

* Flatten sp_helpconstraint when looking for constraints just in case fks are present. Issue #64.

* Start to support 2011 code named "Denali".

* Limit and Offset can take SqlLiteral objects now.


* 3.0.9 *

* Fix array literal parsing bug for ruby 1.9.


* 3.0.8 *

* Support for ActiveRecord v3.0.3 and ARel v2.0.7


* 3.0.7 * 

* Properly quote table names when reflecting on views.

* Add "dead or not enabled" to :dblib's lost connection messages.


* 3.0.6 *

* Maintenance release. Lock down to ActiveRecord 3.0.1 using ARel 1.0.0.


* 3.0.5 *

* Fixed native database type memoization, now at connection instance level. Fix #execute_procedure for :dblib mode to return indifferent access rows too.

* Make login timeout and query timeout backward database.yml friendly for :dblib mode.


* 3.0.4 *
